--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 ---
 layout: default
 ---
-
-<h1 class='font-bold'> Welcome to jekyll-tailwind-starter!</h1>
-
-{% for post in site.posts %}
-  <a href="{{ post.url }}">{{ post.title }}</a>
-{% endfor %}
+<section class='absolute top-0 right-0 left-0 bottom-0'>
+  <div class="absolute w-1/2 top-0 bottom-0 left-0 bg-red-700">
+  </div>
+  <div class="absolute w-1/2 top-0 bottom-0 right-0 flex items-center">
+    <div class="flex-initial text-center px-4 py-2 w-full">
+      <h1 class='font-bold'>BAJT Stack</h1>
+      <h3>Barba.js + Alpine.js + Jekyll + Tailwind</h3>
+      <ul>
+        <li>
+          {% for post in site.posts %}
+          <a href="{{ post.url }}">{{ post.title }}</a>
+          {% endfor %}
+        </li>
+      </ul>
+    </div>
+  </div>
+</section>
